package com.enhui.design.factory.simplefactory.pizzastroe.pizza;

public class GreekPizza extends Pizza{

    @Override
    public void prepare() {
        System.out.println(" 给希腊风味披萨 准备原材料");
    }
}
